<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:layout_weight="4"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/banner">


            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="32dp"
                android:layout_height="49dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.785"
                app:srcCompat="@drawable/n_protine" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="36dp"
                android:layout_height="47dp"
                android:layout_marginBottom="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.677"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/vitamine" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="42dp"
                android:layout_height="54dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.337"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.318"
                app:srcCompat="@drawable/h_lactos" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="38dp"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.392"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/minerals" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="48dp"
                android:layout_height="62dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.295"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.679"
                app:srcCompat="@drawable/energy" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="39dp"
                android:layout_height="52dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/c_protine" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="63dp"
                android:layout_height="45dp"
                android:layout_marginBottom="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.261"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/dna" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginEnd="616dp"
                android:layout_marginBottom="76dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/h_lactos"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/c_protine" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent1"
            android:layout_weight="1"
            android:text="@string/dna" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/energy" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/h_lactos" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hydrolyzed" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorAccent1"
            android:padding="5dp"
            android:text="@string/minerals">

        </Button>

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorAccent1"
            android:padding="5dp"
            android:text="@string/vitamine">

        </Button>
        </LinearLayout>

        <TextView
            android:id="@+id/timer"
            android:layout_width="96dp"
            android:textSize="20sp"
            android:background="@color/colorAccent1"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="294dp"
            tools:layout_editor_absoluteY="278dp"></TextView>
    </LinearLayout>











</LinearLayout>
